# finhub

./: .dockerignore  .env.example  .gitignore  AI Evals_SM5_v0.6.xlsx  CFIN MAS Rules.csv  CI.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Evals-Journey.md  Procfile  README.md  evals-tutor-prompt.md  finhub.md  nixpacks.toml  promptfoo.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
app/: streamlit_app.py
archive/app/: streamlit_app.py
archive/app/pages/: 1_Eval_Results.py
data/synthetic/: documents.json  mappings.json  target_master_data.json
docs/: ARCHITECTURE.md  LANGFUSE-TRACE-EXAMPLE.md  trace-b268da541f455e73279bf2bda22fb7c6.json
evals/: assertions.py  calibration_provider.py  deterministic_cases.yaml  generate_tests.py  promptfoo_summary_calibration_config.yaml  promptfoo_summary_config.yaml  promptfooconfig.yaml  provider.py  summary_assertions.py  summary_calibration_cases.yaml  summary_calibration_generate_tests.py  summary_cases.yaml  summary_generate_tests.py  summary_model_eval_template.xlsx  summary_provider.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AnalyticsPanel.tsx  BusinessImpact.tsx  (+5 more)
scripts/: dev-workbench.sh  log_summary_eval_results.py  promptfoo_common.sh  promptfoo_share_latest.sh  promptfoo_view.sh  run_deterministic_evals.sh  run_summary_calibration.sh  run_summary_eval_batch.sh  run_summary_evals.sh  smoke_check.py
src/cfin_agents/: __init__.py  analyst_summary.py  api.py  api_server.py  attachment_store.py  batch.py  cli.py  document_store.py  eval_cases.py  eval_results.py  models.py  observability.py  paths.py  refresh_summaries.py  repository.py  seed_queue.py  services.py  summary_judge.py  sweep.py  synthetic_generator.py  ticket_migration.py  ticket_models.py  ticket_narratives.py  ticketing.py  timeutil.py  toolkit.py  workflow.py
tests/: test_analyst_summary.py  test_deterministic_cases.py  test_eval_results.py  test_observability.py  test_services.py  test_summary_cases.py  test_summary_judge.py  test_ticket_migration.py  test_ticketing.py  test_workbench_api.py
(+1 files in other folders)
