[project]
name = "agentic-cfin-workflow"
version = "0.1.0"
description = "Vendor-neutral Agentic AI prototype for safe Central Finance-style document replication remediation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "langfuse>=3.0.0",
    "openai-agents>=0.6.0",
    "openinference-instrumentation-openai-agents>=1.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "boto3>=1.35.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
cfin-demo = "cfin_agents.cli:main"
cfin-batch-demo = "cfin_agents.batch:main"
cfin-seed = "cfin_agents.seed_queue:main"
cfin-sweep = "cfin_agents.sweep:main"
cfin-refresh-summaries = "cfin_agents.refresh_summaries:main"
cfin-api = "cfin_agents.api_server:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/cfin_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
